--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,13 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Cadastro de Segurado</title>
-<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-<script src="js/jquery-3.1.1.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
+    <title>Cadastro de Segurado</title>
+    <link th:href="@{/webjars/bootstrap/4.0.0-2/css/bootstrap.min.css}" />
 </head>
 <body>
-	<div th:replace="header"></div>
 	<div class="container" id="content" tabindex="-1">
 		<h1>Ocorreu um erro , entre em contado com administrador do sistema</h1>		
 	</div>
