--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -9,78 +9,69 @@
 	<div th:replace="header"></div>
 
 
+
+
+
 	<div class="container" id="content" tabindex="-1" >
 		<div class="row">
 			
 			<div class="col-md-12 borda-div"  style="background-color: white">
-				<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-				  <!-- Indicators -->
-				  <ol class="carousel-indicators">
-				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
-				  </ol>
-				
-				  <!-- Wrapper for slides -->
-				  <div class="carousel-inner" role="listbox">
-				    <div class="item active">
-				      <div>
-				      	 <img th:src="@{../../../img/banner1.jpg}" alt="..." style="height:580px;width:100%"/>
-					      <div class="carousel-caption">
-					        <h3>BEM-VINDO AO SISTEMA GERENCIADOR DE SEGUROS</h3>
-					        <p></p>
-					      </div>
-				      
-				      	
-				      </div>
-				    </div>
-				    <div class="item">
-				      <img th:src="@{../../../img/banner2.jpg}" alt="..." style="height:580px;width:100%"/>
-				      <div class="carousel-caption">
-				      </div>
-				    </div>
-				    <div class="item">
-				      <img th:src="@{../../../img/banner3.jpg}" alt="..." style="height:580px;width:100%"/>
-				      <div class="carousel-caption">
-				      </div>
-				    </div>
-				    <div class="item">
-				      <img th:src="@{../../../img/banner4.jpg}" alt="..." style="height:580px;width:100%"/>
-				      <div class="carousel-caption">
-				      </div>
-				    </div>
-				    <div class="item">
-				      <img th:src="@{../../../img/banner5.jpg}" alt="..." style="height:580px;width:100%"/>
-				      <div class="carousel-caption">
-				      </div>
-				    </div>
-				    <div class="item">
-				      <img th:src="@{../../../img/banner6.jpg}" alt="..." style="height:580px;width:100%"/>
-				      <div class="carousel-caption">
-				      </div>
-				    </div>
-				  </div>
-				
-				  <!-- Controls -->
-				  <a class="left carousel-control" th:href="@{#carousel-example-generic}" role="button" data-slide="prev">
-				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-				    <span class="sr-only">Previous</span>
-				  </a>
-				  <a class="right carousel-control" th:href="@{#carousel-example-generic}" role="button" data-slide="next">
-				    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-				    <span class="sr-only">Next</span>
-				  </a>
+
+
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+					<ol class="carousel-indicators">
+						<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+						<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+					</ol>
+					<div class="carousel-inner">
+						<div class="carousel-item active">
+							<img th:src="@{../../../img/banner1.jpg}" alt="testset" style="height:580px;width:100%"/>
+							<div class="carousel-caption">
+								<h3>BEM-VINDO AO SISTEMA GERENCIADOR DE SEGUROS</h3>
+								<p></p>
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img th:src="@{../../../img/banner2.jpg}" alt="..." style="height:580px;width:100%"/>
+							<!--<img class="d-block w-100" src="..." alt="Second slide">-->
+						</div>
+						<div class="carousel-item">
+							<img th:src="@{../../../img/banner3.jpg}" alt="..." style="height:580px;width:100%"/>
+						</div>
+						<div class="carousel-item">
+							<img th:src="@{../../../img/banner4.jpg}" alt="..." style="height:580px;width:100%"/>
+						</div>
+						<div class="carousel-item">
+							<img th:src="@{../../../img/banner5.jpg}" alt="..." style="height:580px;width:100%"/>
+						</div>
+						<div class="carousel-item">
+							<img th:src="@{../../../img/banner6.jpg}" alt="..." style="height:580px;width:100%"/>
+						</div>
+
+
+					</div>
+					<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
 				</div>
+
 			</div>
 			<script>
-			$('.carousel').carousel({
-				  pause: "hover";
-			  	  interval:2000;
-			})
+                $('.carousel').carousel({
+                    pause: "hover",
+                	interval:2000
+                })
 			</script>
+
 		</div>
 	</div>
 	
