implementando o spring security na aplicacao

--- a/src/main/resources/templates/comum/automovel.html
+++ b/src/main/resources/templates/comum/automovel.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <meta charset="UTF-8" />
 <h5 class="text-info">INFORMAÇÕES DO AUTOMÓVEL</h5>
 			<br/>
@@ -7,7 +8,7 @@
 				<div class="col-md-4">
 					<div class="form-group">
 						<label for="" class="control-label">Modelo</label>
-						<input type="text" th:field="*{automovel.modelo}" class="form-control" >
+						<input type="text" th:field="*{automovel.modelo}" class="form-control" ></input>
 					</div>
 					<div class="form-group">
 						<label for="" class="control-label">Chassi</label>
