--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -70,7 +70,7 @@
 
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" ></input>
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
             <ul class="navbar-brand pull-right" style="margin-top:12px;margin-right:12px">
@@ -81,7 +81,6 @@
 
 
 
-	</nav>
 </header>
 <div class="alert alert-success" th:if="${!#strings.isEmpty(mensagem)}">
 	<button type="button" class="close" data-dismiss="alert">x</button>
