--- a/src/main/resources/templates/item/cadastro-seguroAutomovel.html
+++ b/src/main/resources/templates/item/cadastro-seguroAutomovel.html
@@ -21,20 +21,20 @@
 			
 			<form action="#" th:action="@{/item/gravar-seguroAutomovel}" th:object="${itemSeguroAutomovel}" method="post">
 				<div class="row">
-				<div class="col-md-5">
-					<div class="form-group">
+					<div class="col-md-5">
+						<div class="form-group">
 
-						 <div class="input-group">
-						 	<input class="form-control typeahead" name="query" id="query" placeholder="Digite um nome ou cpf" type="text" />
-						 	<span class="input-group-btn">
-						 		<a href="#" th:href="'javascript:selecionarSegurado(\''+ automovel +'\')'" class="btn btn-success"  data-toggle="tooltip" data-loading-text="carregando .." title="Seleciona um Segurado">
-						 			<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-						 		</a>
-						 	</span>
+							 <div class="input-group">
+								 <input class="form-control typeahead" name="query" id="query" placeholder="Digite um nome ou cpf" type="text"> </input>
+								<span class="input-group-btn">
+									<a href="#" th:href="'javascript:selecionarSegurado(\''+ automovel +'\')'" class="btn btn-success"  data-toggle="tooltip" data-loading-text="carregando .." title="Seleciona um Segurado">
+										<i class="glyphicon glyphicon-user" aria-hidden="true"></i>
+									</a>
+								</span>
+							</div>
+							<p class="help-block " ><ins>Encontre o segurado para vincular ao seguro.</ins></p>
 						</div>
-						<p class="help-block " ><ins>Encontre o segurado para vincular ao seguro.</ins></p>
-					</div>				
-				</div>
+					</div>
 				</div> 	
 				
 				<br/>		
