--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,15 +13,15 @@
                 <input id="tab-2" type="radio" name="tab" class="sign-up"/>
                 <label for="tab-2" class="tab">Cadastrar</label>
                 <div class="login-form">
-                <form action="#" th:action="@{/home}"  method="post" th:object="${usuario}" >
+                <form action="#" th:action="@{/login}"  method="post" th:object="${loginForm}" >
                     <div class="sign-in-htm">
                         <div class="group">
                             <label for="user" class="label">Usuário</label>
-                            <input type="text" class="input" th:field="*{login}"/>
+                            <input type="text" class="input" name="username"/>
                         </div>
                         <div class="group">
                             <label for="pass" class="label">Senha</label>
-                            <input type="password" class="input" data-type="password" th:field="*{password}"/>
+                            <input type="password" class="input" data-type="password" name="password"/>
                         </div>
                         <br/>
                         <div class="group">
